feat: add Quartzflake ID generator library
- Created package.json for the Quartzflake library with necessary metadata and dependencies.
- Implemented the Quartzflake class in index.ts, providing methods to generate unique IDs based on timestamp, machine ID, and sequence.
- Configured TypeScript settings in tsconfig.json for strict type checking and module resolution.
- Added tsup configuration for building the library in both CommonJS and ESM formats.

--- a/.gitignore
+++ b/.gitignore
@@ -300,4 +300,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Node
+node_modules/
+dist/
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,dotenv,go,kotlin,jetbrains+all,eclipse,visualstudiocode
