fix: add working directory for npm build

--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -6,6 +6,9 @@ on:
 
 jobs:
     build:
+        defaults:
+            run:
+                working-directory: libs/js
         runs-on: ubuntu-latest
         steps:
             - name: Checkout repository
